--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
-    "@cooby/crx-load-script-webpack-plugin": "^1.0.2",
+    "@cooby/crx-load-script-webpack-plugin": "https://github.com/cooby-inc/crx-load-script-webpack-plugin#feat/mv2-support",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/react-router-dom": "^5.3.3",
