--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "version": "1.2.2",
   "manifest_version": 2,
   "web_accessible_resources": ["*.hot-update.json", "main-dom.js"],
-  "permissions": ["tabs", "https://ya.ru/*"],
+  "permissions": ["tabs", "https://www.ea.com/*", "ws://localhost:8080"],
   "background": {
     "persistent": true,
     "scripts": ["background.js"]
@@ -11,7 +11,8 @@
   "content_scripts": [
     {
       "js": ["content.js"],
-      "matches": ["https://ya.ru/*"]
+      "matches": ["https://www.ea.com/*"]
     }
-  ]
+  ],
+  "content_security_policy": "script-src 'self' 'unsafe-eval' https://cdn.jsdelivr.net/npm/p5@0.10.2/lib/p5.min.js; object-src 'self'"
 }
